--- a/covid/assets/style/login.css
+++ b/covid/assets/style/login.css
@@ -113,25 +113,79 @@ html {
 }
 
 .login {
-  padding-top: 101px;
+  padding-top: 150px;
   padding-bottom: 30px;
   text-align: center;
 }
 .login .login__title {
   font-style: normal;
-  font-weight: normal;
-  font-size: 24px;
+  font-weight: 600;
+  font-size: 30px;
   line-height: 37px;
   color: #000000;
-  text-align: center;
-  margin-bottom: 40px;
 }
 .login .login__form {
   margin: 0 auto;
-  text-align: center;
   max-width: 420px;
 }
-.login .login__form input {
+.login .login__form > span {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 18px;
+  text-transform: capitalize;
+  color: rgba(129, 129, 129, 0.7);
+}
+.login .login__form .password {
+  position: relative;
+  margin-bottom: 20px;
+}
+.login .login__form .eye {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 15px;
+  width: 29px;
+  height: 29px;
+  cursor: pointer;
+}
+.login .login__form .remember {
+  display: none;
+}
+.login .login__form .remember-label {
+  cursor: pointer;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 15px;
+  color: rgba(4, 4, 4, 0.7);
+  text-transform: capitalize;
+  position: relative;
+  padding-left: 30px;
+}
+.login .login__form .remember-label::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  border: 2px solid #6CD3AE;
+  box-sizing: border-box;
+  border-radius: 5px;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+}
+.login .login__form .lost-password {
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 15px;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  text-transform: capitalize;
+  color: rgba(0, 0, 0, 0.7);
+}
+.login .login__form > input {
   background: #FFFFFF;
   border: 2px solid #868686;
   box-sizing: border-box;
@@ -141,17 +195,27 @@ html {
   width: 100%;
   padding: 10px;
   font-family: "Montserrat", sans-serif;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
+}
+.login .login__form .password input {
+  background: #FFFFFF;
+  border: 2px solid #868686;
+  box-sizing: border-box;
+  border-radius: 10px;
+  border: 2px solid #868686;
+  font-size: 18px;
+  width: 100%;
+  padding: 10px;
+  font-family: "Montserrat", sans-serif;
 }
 .login .login__form p {
   text-align: left;
+  margin-left: 10px;
   font-style: normal;
   font-weight: 500;
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 15px;
+  line-height: 18px;
   color: rgba(129, 129, 129, 0.7);
-  font-family: "Montserrat", sans-serif;
-  margin-bottom: 15px;
 }
 .login .login__form div {
   display: flex;
@@ -162,13 +226,13 @@ html {
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 16px;
   color: rgba(0, 0, 0, 0.7);
 }
 .login .login__form .sing-in {
   font-style: normal;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 15px;
   line-height: 24px;
   color: #FFFFFF;
   background: #6CD3AE;
@@ -176,14 +240,46 @@ html {
   border: none;
   padding: 21px 127px;
   cursor: pointer;
-  margin-bottom: 40px;
+  margin-top: 27px;
+  margin-bottom: 13px;
+}
+.login .login__form .sing-google {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 18px;
+  background: #fff;
+  color: #6CD3AE;
+  padding: 14px 98px;
+  border: 2px solid #6CD3AE;
+  box-sizing: border-box;
+  border-radius: 10px;
+  margin-top: 7px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  transition: 0.3s;
+  cursor: pointer;
+}
+.login .login__form .sing-google:hover {
+  background: #6CD3AE;
+  color: #fff;
+}
+.login .login__form .sing-google img {
+  margin-right: 15px;
 }
 .login .register {
   font-style: normal;
   font-weight: 500;
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 15px;
+  line-height: 18px;
   color: #000000;
+  margin-top: 5px;
+}
+.login .register span {
+  text-decoration: underline;
 }
 
 .footer {
@@ -513,6 +609,13 @@ html {
   }
   .login .login__form {
     max-width: 280px;
+    margin-top: 15px;
+  }
+  .login .login__form .remember-label {
+    font-size: 12px;
+  }
+  .login .login__form .lost-password {
+    font-size: 12px;
   }
   .login .login__form input {
     font-size: 16px;
@@ -529,14 +632,18 @@ html {
     font-size: 16px;
   }
   .login .login__form .sing-in {
-    font-size: 18px;
+    font-size: 15px;
     cursor: pointer;
     margin-bottom: 30px;
     padding: 10px 98px;
     width: 100%;
+    margin-bottom: 8px;
+  }
+  .login .login__form .sing-google {
+    padding: 10px 84px;
   }
   .login .register {
-    font-size: 18px;
+    font-size: 14px;
   }
 
   .footer {
